# st-spy

./: .gitignore  Cargo.toml  LICENSE  PLAN.org  README.md
doc/: callout-stack-stitching.md
examples/: deep-native-plugin-workload.st  deep-native-plugin.c  dump_traces.rs  ffi-plugin-workload.st
src/: binary_parser.rs  chrometrace.rs  config.rs  console_viewer.rs  dump.rs  lib.rs  main.rs  native_stack_trace.rs  sampler.rs  smalltalk_process_info.rs  smalltalk_spy.rs  smalltalk_symbolizer.rs  speedscope.rs  stack_trace.rs  timer.rs
