[features]
default = ["cli"]
cli = [
    "unwind",
    "dep:clap",
    "dep:clap_complete",
    "dep:console",
    "dep:ctrlc",
    "dep:indicatif",
    "dep:inferno",
    "dep:env_logger",
]
unwind = ["remoteprocess/unwind"]

[package]
name = "st-spy"
version = "0.1.0"
authors = ["Tim Felgentreff <timfelgentreff@gmail.com>"]
description = "Sampling profiler for OpenSmalltalk VM programs"
readme = "README.md"
license = "MIT"
build = "build.rs"
edition = "2021"

[[bin]]
name = "st-spy"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
anyhow = "1"
clap = { version = "4.6.1", features = ["wrap_help", "cargo", "derive"], optional = true }
clap_complete = { version = "4.6.1", optional = true }
console = { version = "0.16", optional = true }
ctrlc = { version = "3", optional = true }
indicatif = { version = "0.18", optional = true }
env_logger = { version = "0.11", optional = true }
inferno = { version = "0.12.6", optional = true }
goblin = "0.10.5"
libc = "0.2"
log = "0.4"
lru = "0.17"
num-traits = "0.2"
tempfile = "3.27.0"
page_size = "0.6.0"
proc-maps = "0.4.0"
memmap2 = "0.9.4"
cpp_demangle = "0.5"
serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"
serde_json = "1.0"
rand = "0.9"
rand_distr = "0.5"
remoteprocess = "0.5.2"
chrono = "0.4.44"

[target.'cfg(unix)'.dependencies]
termios = "0.3.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["errhandlingapi", "winbase", "consoleapi", "wincon", "handleapi", "timeapi", "processenv"] }
